[tool.poetry]
name = "ai-stack"
version = "0.1.0"
description = "General template for AI"
authors = ["Your Name <your.email@example.com>"]
package-mode = false

[tool.poetry.dependencies]
python = "^3.12.2"
openai = "^1.66.3"
anthropic = "^0.49.0"
pandas = "^2.2.3"
dotenv = "^0.9.9"
fastapi = "^0.115.11"
uvicorn = "^0.34.0"
streamlit = "^1.43.2"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"
jupyterlab = "^4.3.6"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api" 